Fix background and color font for correct ratio contrast

--- a/style.css
+++ b/style.css
@@ -803,15 +803,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #a76648;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #a76648;
     color: #FFFFFF!important;
 }
 
@@ -829,7 +829,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #a76648!important;
 }
 
 .ltc-atomic-tangerine:hover {
